# GenCore

./: CMakeLists.txt  README.md
include/: 2d.h  blender.h  bloat_strategy.h  border.h  connection.h  conversions.h  converter.h  edge_graph.h  embedding.cpp  embedding.h  graph.h  grid.h  identifiable.h  line.h  magnet.h  magnetic.h  math_util.h  matrix.h  morphology.h  multizone_resource_generator.h  nodes.h  noise.h  plane.h  radial.h  random_engine.h  random_generator.h  rasterization.h  resource_generator.h  self_pointer.h  simulator.h  sizable.h  spot.h  templates.h  zone_bloater.h
src/: 2d.cpp  bloat_strategy.cpp  border.cpp  edge_graph.cpp  embedding.cpp  graph.cpp  identifiable.cpp  magnet.cpp  magnetic.cpp  main.cpp  noise.cpp  plane.cpp  radial.cpp  random_engine.cpp  random_generator.cpp  simulator.cpp  spot.cpp  test.cpp
